--- a/app/src/main/res/layout/fragment_change_password_page.xml
+++ b/app/src/main/res/layout/fragment_change_password_page.xml
@@ -9,28 +9,15 @@
     android:layout_marginBottom="40dp"
     tools:context=".changePasswordPage">
 
-    <Button
-        android:id="@+id/backToLoginPageButton"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:backgroundTint="@color/white"
-        android:drawableLeft="@drawable/ic_baseline_black_arrow_back_24"
-        android:fontFamily="@font/poppins_semibold"
-        android:textColor="@color/pastel_red"
-        android:textSize="14sp"
-        tools:ignore="SpeakableTextPresentCheck" />
-
     <TextView
         android:id="@+id/changePasswordTitle"
         android:layout_width="247dp"
         android:layout_height="40dp"
-        android:layout_below="@id/backToLoginPageButton"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="left"
-        android:textColor="@color/pastel_red"
         android:text="Change Password"
+        android:textColor="@color/pastel_red"
         android:textSize="20sp" />
 
     <TextView
@@ -126,7 +113,7 @@
         android:textSize="16sp"/>
 
     <Button
-        android:id="@+id/changePasswordButton"
+        android:id="@+id/changePasswordBut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/reEnteredPassword"
