--- a/app/src/main/res/layout/fragment_calorie_counter_page.xml
+++ b/app/src/main/res/layout/fragment_calorie_counter_page.xml
@@ -179,7 +179,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:hint="calories"
+                    android:hint="kcal"
                     android:inputType="number"
                     android:textAlignment="center"
                     android:textColorHint="@color/pastel_red"
