--- a/app/src/main/res/layout/cardviewallrecipes.xml
+++ b/app/src/main/res/layout/cardviewallrecipes.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/allrecipesCard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+
+    >
 
         <ImageButton
             android:id="@+id/asian_salmon_picture2"
@@ -15,8 +18,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="84dp"
+            android:layout_marginTop="0dp"
             android:background="@drawable/roundcorner"
             android:clickable="true"
             android:contentDescription="@string/hello_blank_fragment"
@@ -31,31 +33,30 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="225dp"
+            android:layout_marginTop="130dp"
             android:fontFamily="@font/poppins_medium"
             android:text="Green Tea Noodles with Sticky Sweet Chili Salmon "
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             android:textStyle="bold" />
 
-        <ImageButton
-            android:id="@+id/savedAllRecipesbutton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="86dp"
-            android:layout_marginLeft="330dp"
-            android:background="@drawable/circle"
-            android:backgroundTint="#FFFFFF"
-            android:minWidth="48dp"
-            android:minHeight="48dp"
-            android:src="@drawable/ic_baseline_pastelred_bookmark_border_24" />
+    <ImageButton
+        android:id="@+id/savedAllRecipesbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="310dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/circle"
+        android:backgroundTint="#FFFFFF"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
+        android:src="@drawable/ic_baseline_pastelred_bookmark_border_24"
+        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="39dp"
-            android:layout_marginTop="275dp"
-            android:layout_marginStart="28dp"
+            android:layout_marginTop="180dp"
             android:orientation="horizontal">
 
             <TextView
@@ -88,6 +89,3 @@
     </androidx.cardview.widget.CardView>
 
 
-
-
-</RelativeLayout>
