--- a/app/src/main/res/layout/fragment_all_recipes_page.xml
+++ b/app/src/main/res/layout/fragment_all_recipes_page.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".allRecipesPage">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/relativeLayoutAllRecipesPage"
-        android:layout_margin="30dp">
+    tools:context=".allRecipesPage"
+    >
 
     <Button
         android:id="@+id/returnToHomePageButton"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -33,6 +28,8 @@
         android:layout_width="match_parent"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="left"
@@ -40,20 +37,13 @@
         android:textSize="20sp"
         android:textColor="@color/black"/>
 
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:fillViewport="true"
-    android:layout_below="@id/allRecipesText">
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecyclerAllrecipe"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </androidx.recyclerview.widget.RecyclerView>
-    </ScrollView>
-    </RelativeLayout>
+        android:layout_width="wrap_content"
+        android:layout_height="510dp"
+        android:layout_below="@id/returnToHomePageButton"
+        android:layout_marginLeft="25dp"
+        tools:listitem="@layout/cardviewallrecipes" />
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
@@ -79,7 +69,9 @@
             android:layout_gravity="bottom"
             app:fabCradleMargin="10dp"
             app:fabCradleRoundedCornerRadius="10dp"
-            app:fabCradleVerticalOffset="10dp">
+            app:fabCradleVerticalOffset="10dp"
+            app:layout_anchor="@+id/bottomAppBar"
+            app:layout_anchorGravity="bottom|center">
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottomNavigationView"
@@ -87,12 +79,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="16dp"
                 android:background="@drawable/transparent_background"
-                app:menu="@menu/bottom_nav_menu"
+                app:menu="@menu/bottom_nav_menu" />
 
-                />
         </com.google.android.material.bottomappbar.BottomAppBar>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-
-</RelativeLayout>
+</LinearLayout>
