--- a/app/src/main/res/layout/fragment_achievements_page.xml
+++ b/app/src/main/res/layout/fragment_achievements_page.xml
@@ -20,7 +20,8 @@
         android:drawableLeft="@drawable/ic_baseline_black_arrow_back_24"
         android:fontFamily="@font/poppins_semibold"
         android:textColor="@color/pastel_red"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
     <TextView
         android:id="@+id/achievementsTitle"
         android:layout_below="@id/backToLoginPageButton"
