--- a/app/src/main/res/layout/fragment_admin_view_reports_page.xml
+++ b/app/src/main/res/layout/fragment_admin_view_reports_page.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="10dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="left"
         android:text="Reports"
@@ -32,15 +32,15 @@
         android:textColor="@color/black"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewReports"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/recyclerViewReports"
         android:layout_below="@id/viewReportTitle"
-        android:layout_margin="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp" />
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        tools:listitem="@layout/cardviewadminreport" />
 
 
 </RelativeLayout>
