--- a/app/src/main/res/layout/fragment_customer_support_page.xml
+++ b/app/src/main/res/layout/fragment_customer_support_page.xml
@@ -60,38 +60,11 @@
             android:textColorHint="@color/pastel_red"
             android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/emailTitle"
-            android:layout_width="wrap_content"
-            android:layout_below="@id/name"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/poppins_semibold"
-            android:gravity="left"
-            android:text="Email"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/emailTitle"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/white_field"
-            android:drawablePadding="20dp"
-            android:hint="Email"
-            android:padding="10dp"
-            android:inputType="textEmailAddress"
-            android:textColorHint="@color/pastel_red"
-            android:textSize="16sp" />
-
 
         <TextView
             android:id="@+id/problemTitle"
             android:layout_width="wrap_content"
-            android:layout_below="@id/email"
+            android:layout_below="@id/name"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_marginTop="20dp"
@@ -103,7 +76,7 @@
         <EditText
             android:id="@+id/problemDescription"
             android:layout_width="351dp"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_below="@id/problemTitle"
             android:layout_alignParentStart="true"
             android:layout_marginTop="10dp"
@@ -126,6 +99,20 @@
             android:fontFamily="@font/poppins_semibold"
             android:text="SUBMIT"
             android:textColor="@color/white"
+            android:textSize="14sp"
+            android:layout_marginBottom="30dp"/>
+
+        <Button
+            android:id="@+id/backToProfilePageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/problemDescription"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="30dp"
+            android:backgroundTint="@color/white"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="CANCEL"
+            android:textColor="@color/pastel_red"
             android:textSize="14sp"
             android:layout_marginBottom="30dp"/>
 
