--- a/app/src/main/res/layout/fragment_food_ingredient_page.xml
+++ b/app/src/main/res/layout/fragment_food_ingredient_page.xml
@@ -84,18 +84,17 @@
     <ScrollView
         android:id="@+id/scrollViewFoodIngredients"
         android:layout_width="match_parent"
-        android:layout_height="360dp"
+        android:layout_height="380dp"
         android:layout_below="@id/foodIngredientsTitle"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="30dp"
-        android:fillViewport="true">
+        android:layout_margin = "20dp"
+        android:fillViewport="true"
+        >
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/foodTitle">
+            android:layout_below="@+id/foodTitle"
+            tools:listitem="@layout/cardviewfoodlistingridient">
 
         </androidx.recyclerview.widget.RecyclerView>
     </ScrollView>
