--- a/app/src/main/res/layout/fragment_food_steps_page.xml
+++ b/app/src/main/res/layout/fragment_food_steps_page.xml
@@ -86,16 +86,14 @@
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_below="@id/foodTitle"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="30dp"
+        android:layout_margin = "20dp"
         android:fillViewport="true">
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/foodTitle">
+            android:layout_below="@+id/foodTitle"
+            tools:listitem="@layout/cardviewfoodliststeps">
 
         </androidx.recyclerview.widget.RecyclerView>
     </ScrollView>
