--- a/app/src/main/res/layout/fragment_saved_recipes_page.xml
+++ b/app/src/main/res/layout/fragment_saved_recipes_page.xml
@@ -6,10 +6,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".savedRecipesPage">
 
-    <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/linearLayoutSavedRecipes1"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
         android:orientation="horizontal">
 
         <TextView
@@ -20,33 +23,46 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="7dp"
             android:layout_marginTop="8dp"
-            android:fontFamily="@font/poppins_medium"
+            android:fontFamily="@font/poppins_semibold"
             android:text="Saved Recipes"
             android:textColor="#000000"
-            android:textSize="24sp"
-            android:textStyle="bold">
+            android:textSize="20sp"
+            >
 
         </TextView>
 
         <Button
             android:id="@+id/btnBackAllRecipeToHomePage"
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="100dp"
+            android:textSize="14dp"
+            android:layout_marginStart="70dp"
+            android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
+            android:fontFamily="@font/poppins_semibold"
+            android:backgroundTint="@color/white"
+            android:textColor="@color/pastel_red"
             android:layout_marginTop="8dp"
             android:text="Back"></Button>
 
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/RecyclerSavedRecipe"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp">
+        android:layout_below="@id/linearLayoutSavedRecipes1"
+        android:fillViewport="true" >
 
-    </androidx.recyclerview.widget.RecyclerView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/RecyclerSavedRecipe"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin ="10dp"
+            tools:listitem="@layout/cardviewsavedrecipes">
+
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+    </ScrollView>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
