--- a/app/src/main/res/layout/fragment_social_feed_page.xml
+++ b/app/src/main/res/layout/fragment_social_feed_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout"
@@ -7,69 +7,61 @@
     android:layout_height="match_parent"
     tools:context=".socialFeedPage">
 
-    <Button
-        android:id="@+id/backFeedToHomePageButton"
-        android:layout_width="116dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="25dp"
-        android:backgroundTint="@color/white"
-        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
-        android:fontFamily="@font/poppins_semibold"
-        android:text="back"
-        android:textColor="@color/pastel_red"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/FeedTitleText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="54dp"
-        android:layout_marginEnd="266dp"
-        android:fontFamily="@font/poppins_semibold"
-        android:text="Feed"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toStartOf="@+id/backToHomePageButton"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="UnknownId" />
-
     <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="426dp"
-        android:layout_height="242dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/FeedTitleText">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:id="@+id/linearLayoutSocialFeed1"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/FeedTitleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="Feed"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            tools:ignore="UnknownId" />
+
+        <Button
+            android:id="@+id/backFeedToHomePageButton"
+            android:layout_width="116dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="190dp"
+            android:backgroundTint="@color/white"
+            android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="back"
+            android:textColor="@color/pastel_red"
+            android:textSize="14sp" />
 
     </LinearLayout>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/coordinatorLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:foregroundGravity="bottom"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:context=".MainActivity">
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton2"
-            android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/linearLayoutSocialFeed1"
+        android:fillViewport="true">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/RecyclerSavedRecipe"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/hello_blank_fragment"
-            android:src="@drawable/ic_baseline_white_plus_sign_24"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            tools:listitem="@layout/cardviewfeedcomment"
+            >
 
-            app:layout_anchor="@id/bottomAppBar" />
+        </androidx.recyclerview.widget.RecyclerView>
+    </ScrollView>
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".MainActivity">
 
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottomAppBar"
@@ -91,18 +83,18 @@
                 />
         </com.google.android.material.bottomappbar.BottomAppBar>
 
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/hello_blank_fragment"
+            android:src="@drawable/ic_baseline_white_plus_sign_24"
+
+            app:layout_anchor="@id/bottomAppBar" />
+
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/FeedTitleText">
 
-    </androidx.recyclerview.widget.RecyclerView>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
