--- a/app/src/main/res/layout/fragment_all_recipes_page.xml
+++ b/app/src/main/res/layout/fragment_all_recipes_page.xml
@@ -15,6 +15,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
         android:backgroundTint="@color/white"
         android:drawableLeft="@drawable/ic_baseline_black_arrow_back_24"
         android:fontFamily="@font/poppins_semibold"
@@ -24,18 +26,18 @@
 
     <TextView
         android:id="@+id/allRecipesText"
-        android:layout_below="@id/returnToHomePageButton"
         android:layout_width="match_parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
         android:layout_height="wrap_content"
+        android:layout_below="@id/returnToHomePageButton"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="20dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="left"
         android:text="All Recipes"
-        android:textSize="20sp"
-        android:textColor="@color/black"/>
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecyclerAllrecipe"
