--- a/app/src/main/res/layout/fragment_customer_support_page.xml
+++ b/app/src/main/res/layout/fragment_customer_support_page.xml
@@ -103,7 +103,7 @@
             android:layout_marginBottom="30dp"/>
 
         <Button
-            android:id="@+id/backToProfilePageButton"
+            android:id="@+id/cancelReportButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/problemDescription"
