--- a/app/src/main/res/layout/fragment_profile_page.xml
+++ b/app/src/main/res/layout/fragment_profile_page.xml
@@ -192,7 +192,7 @@
                 </LinearLayout>
 
                 <Button
-                    android:id="@+id/reportButtonn"
+                    android:id="@+id/reportButton"
                     android:layout_width="56dp"
                     android:layout_height="47dp"
                     android:layout_marginTop="21dp"
