--- a/app/src/main/res/layout/fragment_food_steps_page.xml
+++ b/app/src/main/res/layout/fragment_food_steps_page.xml
@@ -86,7 +86,10 @@
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_below="@id/foodTitle"
-        android:layout_margin = "20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:fillViewport="true">
 
         <androidx.recyclerview.widget.RecyclerView
