--- a/app/src/main/res/layout/fragment_customer_support_page.xml
+++ b/app/src/main/res/layout/fragment_customer_support_page.xml
@@ -33,41 +33,14 @@
             android:layout_marginTop="20dp"
             android:src="@drawable/ic_customer_support" />
 
-        <TextView
-            android:id="@+id/nameTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/customerSupportView"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/poppins_semibold"
-            android:gravity="left"
-            android:text="Name"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/name"
-            android:layout_width="354dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/nameTitle"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/white_field"
-            android:drawablePadding="20dp"
-            android:hint="Name"
-            android:minHeight="48dp"
-            android:padding="10dp"
-            android:textColorHint="@color/pastel_red"
-            android:textSize="16sp" />
-
 
         <TextView
             android:id="@+id/problemTitle"
             android:layout_width="wrap_content"
-            android:layout_below="@id/name"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/customerSupportView"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:fontFamily="@font/poppins_semibold"
             android:gravity="left"
             android:text="Problem Description"
