--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -123,6 +123,7 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/recipe1"
                         android:layout_width="match_parent"
                         android:layout_height="135dp"
                         android:src="@drawable/asian_salmon">
@@ -130,31 +131,15 @@
                     </ImageView>
 
                     <TextView
+                        android:id="@+id/recipeName1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
                         android:layout_marginBottom="4dp"
                         android:fontFamily="@font/poppins"
                         android:text="SUMA SEDAP"
                         android:textAlignment="center"
                         android:textSize="15dp"
-                        android:textStyle="bold">
-
-                    </TextView>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Time"
-                        android:textAlignment="center">
-
-                    </TextView>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="10 min"
-                        android:textAlignment="center"
-                        android:textSize="20dp"
                         android:textStyle="bold">
 
                     </TextView>
@@ -169,6 +154,7 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/recipe2"
                         android:layout_width="match_parent"
                         android:layout_height="135dp"
                         android:src="@drawable/asian_salmon">
@@ -176,31 +162,15 @@
                     </ImageView>
 
                     <TextView
+                        android:id="@+id/recipeName2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
                         android:layout_marginBottom="4dp"
                         android:fontFamily="@font/poppins"
                         android:text="SUMA SEDAP"
                         android:textAlignment="center"
                         android:textSize="15dp"
-                        android:textStyle="bold">
-
-                    </TextView>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Time"
-                        android:textAlignment="center">
-
-                    </TextView>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="10 min"
-                        android:textAlignment="center"
-                        android:textSize="20dp"
                         android:textStyle="bold">
 
                     </TextView>
