--- a/app/src/main/res/layout/cardviewsavedrecipes.xml
+++ b/app/src/main/res/layout/cardviewsavedrecipes.xml
@@ -9,26 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="5dp"
-       >
+
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+
             android:orientation="vertical">
-
-            <Button
-                android:id="@+id/ButtonDeleteRecipe"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginEnd="5dp"
-                android:background="@drawable/transparent_background"
-                android:drawableLeft="@drawable/ic_baseline_delete_outline_24"
-                android:backgroundTint="#FFFFFF"
-                >
-
-            </Button>
 
             <RelativeLayout
                 android:id="@+id/relativeLayoutSavedRecipesPage"
@@ -44,6 +33,7 @@
                     android:background="@drawable/roundcorner"
                     android:clickable="true"
                     android:onClick="clickNew"
+                    android:padding="5dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/french_toast">
 
@@ -51,20 +41,38 @@
 
             </RelativeLayout>
 
-            <TextView
-                android:id="@+id/nameFoodAllRecipe"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:clickable="true"
-                android:fontFamily="@font/poppins_semibold"
-                android:linksClickable="true"
-                android:padding="10dp"
-                android:text="Low Calorie French Toast"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                >
+                android:orientation="horizontal">
 
-            </TextView>
+                <TextView
+                    android:id="@+id/nameFoodAllRecipe"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="10dp"
+                    android:clickable="true"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:linksClickable="true"
+                    android:text="Low Calorie French Toast"
+                    android:textColor="@color/black"
+                    android:textSize="16sp">
+
+                </TextView>
+
+                <Button
+                    android:id="@+id/ButtonDeleteRecipe"
+                    android:layout_width="match_parent"
+                    android:layout_marginStart="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:background="@drawable/transparent_background"
+                    android:backgroundTint="#FFFFFF"
+                    android:drawableLeft="@drawable/ic_baseline_delete_outline_24">
+
+                </Button>
+            </LinearLayout>
 
         </LinearLayout>
 
