--- a/app/src/main/res/layout/fragment_food_ingredient_page.xml
+++ b/app/src/main/res/layout/fragment_food_ingredient_page.xml
@@ -86,11 +86,14 @@
         android:layout_width="match_parent"
         android:layout_height="380dp"
         android:layout_below="@id/foodIngredientsTitle"
-        android:layout_margin = "20dp"
-        android:fillViewport="true"
-        >
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:fillViewport="true">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewListIngredient"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/foodTitle"
