--- a/app/src/main/res/layout/fragment_calories_intake_page.xml
+++ b/app/src/main/res/layout/fragment_calories_intake_page.xml
@@ -53,7 +53,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:id="@+id/recyclerViewCalorieIntake"/>
+            android:id="@+id/recyclerViewCalorieIntake"
+            tools:listitem="@layout/cardviewcalorieintake"/>
     </ScrollView>
 
 
