--- a/app/src/main/res/layout/fragment_food_steps_page.xml
+++ b/app/src/main/res/layout/fragment_food_steps_page.xml
@@ -93,6 +93,7 @@
         android:fillViewport="true">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewSteps"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/foodTitle"
