--- a/app/src/main/res/layout/cardviewallrecipes.xml
+++ b/app/src/main/res/layout/cardviewallrecipes.xml
@@ -36,7 +36,7 @@
                 tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
             <ImageButton
-                android:id="@+id/asian_salmon_picture2"
+                android:id="@+id/recipeImage"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_gravity="center_horizontal"
@@ -49,7 +49,7 @@
                 android:src="@drawable/green_tea_salmon" />
 
             <TextView
-                android:id="@+id/nameFoodAllRecipe"
+                android:id="@+id/recipeName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_medium"
