--- a/app/src/main/res/layout/fragment_social_feed_page.xml
+++ b/app/src/main/res/layout/fragment_social_feed_page.xml
@@ -37,18 +37,11 @@
             android:textSize="14sp" />
 
     </LinearLayout>
-
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/linearLayoutSocialFeed1"
-        android:fillViewport="true">
-
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/RecyclerSavedRecipe"
+            android:id="@+id/RecyclerFeedRecipe"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/linearLayoutSocialFeed1"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
@@ -56,7 +49,11 @@
             >
 
         </androidx.recyclerview.widget.RecyclerView>
-    </ScrollView>
+
+
+
+
+
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
